# NeonObby

./: .gitignore  CMakeLists.txt  README.md
assets/blender/: pixeldude.blend
assets/levels/: level_01.json  level_02.json  level_03.json
assets/models/: pixeldude.glb
assets/shaders/: basic.frag  bloom_blur.frag  bloom_composite.frag  debug.frag  debug.vert  neon.frag  neon.vert  particle.frag  particle.vert  postprocess.vert  skinned.vert  skybox.frag  skybox.vert
blendermodels/: lowpoly_character.blend  lowpoly_character.glb
cmake/: CompilerWarnings.cmake  FetchDependencies.cmake
installer/: NeonObby.iss
resources/: app.rc  make_icon.ps1
src/: Version.h.in  main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h
src/components/: CheckpointComponent.h  ColliderComponent.h  MaterialComponent.h  MeshComponent.h  ModelComponent.h  ObstacleComponent.h  PlayerComponent.h  RigidBodyComponent.h  TransformComponent.h  TriggerComponent.h
src/core/: Input.h  Paths.cpp  Paths.h  Settings.cpp  Settings.h  Timer.h  Window.cpp  Window.h
src/ecs/: ComponentPool.h  Entity.h  System.h  SystemScheduler.h  World.h
src/level/: LevelLoader.h  ObstacleFactory.h
src/net/: Updater.cpp  Updater.h
src/physics/: AABB.h  Capsule.h  CollisionTests.h  PhysicsWorld.h  Ray.h
src/player/: ThirdPersonCamera.h
src/renderer/: Camera.cpp  Camera.h  DebugRenderer.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  MeshCache.h  MeshFactory.cpp  MeshFactory.h  Model.h  ModelLoader.cpp  ModelLoader.h  ParticleSystem.h  PostProcess.cpp  PostProcess.h  ScreenQuad.h  Shader.cpp  Shader.h
src/save/: SaveManager.h
src/scene/: GameScene.h  MenuScene.h  Scene.h  SceneManager.h
src/systems/: CheckpointSystem.h  ObstacleSystem.h  PlayerControllerSystem.h  RenderSystem.h  TimerSystem.h  TriggerSystem.h
src/ui/: DeathOverlay.h  HUD.h  LevelCompleteUI.h  MainMenuUI.h  PauseMenu.h  SettingsUI.h  UIManager.h  UpdateNotification.h
